When trying to import a category list, each entry produces the message 'Unable to add account: Account has invalid type'.  The only option given is 'OK', which produces the same message for the next category. The problem lies in MyMoneyQifReader::processCategoryEntry.  An "!extractLine('I').isEmpty()" (or 'E') test is performed.  If, as is likely, the line contains only the 'I' or 'E', the test will return empty and no accounts get set up.

The test is modified to confirm if either line is detected, empty or otherwise, and then set up accordingly.
BUG:274598
REVIEW:6694

svn path=/trunk/extragear/office/kmymoney/; revision=1234489